--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -7,9 +7,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
-        <!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>    -->
+
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="jobDtl">Job Details</a>
+        </li>  
+
       </ul>
       <form class="d-flex">
         <button class="LogInBtn" type="submit">Log In</button>
