--- a/src/app/features/Jobs/job-details/job-details.css
+++ b/src/app/features/Jobs/job-details/job-details.css
@@ -17,7 +17,7 @@
     border-radius: 10px;
     border: none;
     cursor: pointer;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     outline: none;
     box-shadow: none;
 }
