--- a/src/app/features/Jobs/job-details/job-details.html
+++ b/src/app/features/Jobs/job-details/job-details.html
@@ -5,29 +5,29 @@
             <div class="col-lg-9">
                 <div class="d-flex">
                     <i class="bi bi-buildings me-2"></i>
-                    <span>TechFlow Solutions</span>
+                    <span>{{jobDetails().companyName}}</span>
                 </div>
-                <h1 class="my-3">Senior Frontend Developer</h1>
+                <h1 class="my-3">{{jobDetails().title}}</h1>
                 <div class="d-flex ">
                     <div class="d-flex me-4">
                         <i class="bi bi-geo-alt me-2"></i>
-                        <span>Location</span>
+                        <span>{{jobDetails().companyLocation}}</span>
                     </div>
                     <div class="d-flex me-4">
                         <i class="bi bi-clock me-2"></i>
-                        <span>Posted At: </span>
+                        <span>Posted At : {{jobDetails().postedDate | date:'MMM dd, yyyy'}}</span>
                     </div>
                     <div class="d-flex me-4">
                         <i class="bi bi-calendar2 me-2"></i>
-                        <span>Apply By: </span>
+                        <span>Apply By: {{jobDetails().expireDate | date:'MMM dd, yyyy'}}</span>
                     </div>
                 </div>
                 <div class="d-flex mt-3">
                     <div class="job-time me-3">
-                        <span>Full-Time</span>
+                        <span>{{jobDetails().jobType}}</span>
                     </div>
                     <div style="margin-top: 5px; color:green">
-                        <span>{{ 200 | currency:'USD':'symbol' }}</span>
+                        <span>{{ jobDetails().salary | currency:'USD':'symbol' }}</span>
                     </div>
                 </div>
 
@@ -57,7 +57,7 @@
                                     <i class="bi bi-mortarboard m-3" style="color:rgb(58, 111, 245); font-size: large;"></i>
                                     <div class="d-flex flex-column">
                                         <span style="color: rgb(117, 117, 117);">Experience</span>
-                                        <span style="font-weight: 500;">Senior Level</span>
+                                        <span style="font-weight: 500;">{{jobDetails().experienceLevel}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -67,7 +67,7 @@
                                     <i class="bi bi-clock m-3" style="color:rgb(58, 111, 245); font-size: large;"></i>
                                     <div class="d-flex flex-column">
                                         <span style="color: rgb(162, 162, 162);">Type</span>
-                                        <span style="font-weight: 500;">Full-Time</span>
+                                        <span style="font-weight: 500;">{{jobDetails().jobType}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
                                     <i class="bi bi-people m-3" style="color:rgb(58, 111, 245); font-size: large;"></i>
                                     <div class="d-flex flex-column">
                                         <span style="color: rgb(162, 162, 162);">Team Size</span>
-                                        <span style="font-weight: 500;">5-10</span>
+                                        <span style="font-weight: 500;">{{jobDetails().minTeamSize}}-{{jobDetails().maxTeamSize}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
                                     <i class="bi bi-geo-alt m-3" style="color:rgb(58, 111, 245); font-size: large;"></i>
                                     <div class="d-flex flex-column">
                                         <span style="color: rgb(162, 162, 162);">Location</span>
-                                        <span style="font-weight: 500;">Remote</span>
+                                        <span style="font-weight: 500;">{{jobDetails().workplaceType}}</span>
                                     </div>
                                 </div>
                             </div>
@@ -97,18 +97,19 @@
                         <!-- Job Description -->
                         <div class="mt-4">
                             <h5>Job Description</h5>
-                            <span class="mt-1">We are seeking a highly skilled Senior Frontend Developer with expertise in Angular and React to join our dynamic team. The ideal candidate will have a passion for building responsive and user-friendly web applications.</span>
+                            <span class="mt-1">{{jobDetails().description}}</span>
 
                         </div>
                         <!-- Key Requirements -->
                         <div>
                             <h5 class="mt-4">Key Requirements</h5>
                             <ul style="list-style-type: none; padding-left: 0px;">
-                                <div class="d-flex mb-3"><i class="bi bi-star me-2" style="color:rgb(27, 193, 27)"></i><li>Proven experience as a Frontend Developer with expertise in Angular and React.</li></div>
-                                <div class="d-flex mb-3"><i class="bi bi-star me-2" style="color:rgb(27, 193, 27)"></i><li>Strong understanding of web development principles and best practices.</li></div>
-                                <div class="d-flex mb-3"><i class="bi bi-star me-2" style="color:rgb(27, 193, 27)"></i><li>Experience with responsive design and cross-browser compatibility.</li></div>
-                                <div class="d-flex mb-3"><i class="bi bi-star me-2" style="color:rgb(27, 193, 27)"></i><li>Familiarity with version control systems (e.g., Git).</li></div>
-                                <div class="d-flex mb-3"><i class="bi bi-star me-2" style="color:rgb(27, 193, 27)"></i><li>Excellent problem-solving skills and attention to detail.</li></div>
+                                @for(req of requirementsList(); track $index)
+                                {
+                                    <div class="d-flex mb-3"><i class="bi bi-star me-2" style="color:rgb(27, 193, 27)"></i>
+                                        <li>{{req}}</li>
+                                    </div>
+                                }
                             </ul>
                         </div>
 
@@ -191,7 +192,7 @@
                         </div> -->
                         <h3 class="d-flex my-3" >
                             <i class="bi bi-buildings me-2"></i>
-                            <span>TechFlow Solutions</span>
+                            <span>{{jobDetails().companyName}}</span>
                         </h3>
                         
                         <p>TechFlow Solutions is a leading software development company specializing in innovative web solutions.</p>
@@ -199,7 +200,7 @@
                         <div class="d-flex mt-lg-2">
                             <i class="bi bi-people me-3" style="color:rgb(58, 111, 245); font-size: large;"></i>
                             <span style="color: rgb(162, 162, 162); margin-right: 8px;">Company Size: </span>
-                            <span style="font-weight: 500;">51-200 Employees</span>
+                            <span style="font-weight: 500;">{{jobDetails().minTeamSize}}-{{jobDetails().maxTeamSize}} Emplyees</span>
                         </div>
                         <div class="d-flex mt-2">
                             <i class="bi bi-buildings me-3" style="color:rgb(58, 111, 245); font-size: large;"></i>
@@ -209,7 +210,7 @@
                         <div class="d-flex mt-2">
                             <i class="bi bi-geo-alt me-3" style="color:rgb(58, 111, 245); font-size: large;"></i>
                             <span style="color: rgb(162, 162, 162); margin-right: 8px;">Location: </span>
-                            <span style="font-weight:500;">New York, USA</span>
+                            <span style="font-weight:500;">{{jobDetails().companyLocation}}</span>
                         </div>
                         <div class="d-flex mt-2">
                             <i class="bi bi-link-45deg me-3" style="color:rgb(58, 111, 245); font-size:larger;"></i>
