--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <div class="logo-icon"><i class="bi bi-suitcase-lg"></i></div>
-    <a class="navbar-brand">HireSmart</a>
+    <a class="navbar-brand" routerLink="/home">HireSmart</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,7 +9,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
 
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="jobDtl">Job Details</a>
+          <a class="nav-link active" aria-current="page" routerLink="/savedJobs">Saved</a>
         </li>  
 
       </ul>
@@ -20,3 +20,11 @@
     </div>
   </div>
 </nav>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<footer>
+  <app-footer></app-footer>
+</footer>
