--- a/src/app/features/Jobs/job-details/job-details.html
+++ b/src/app/features/Jobs/job-details/job-details.html
@@ -215,7 +215,7 @@
                         <div class="d-flex mt-2">
                             <i class="bi bi-link-45deg me-3" style="color:rgb(58, 111, 245); font-size:larger;"></i>
                             <span style="color: rgb(162, 162, 162); margin-right: 8px;">Website: </span>
-                            <span><a href="#" target="_blank" style="text-decoration: none; font-weight:500;">Visit Site</a></span>
+                            <span><a target="_blank" style="text-decoration: none; font-weight:500;">Visit Site</a></span>
                         </div>
 
 
