--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 
-<nav>
+<!-- <nav>
     <app-navbar />
-</nav>
+</nav> -->
 
 
 <main>
@@ -9,6 +9,9 @@
 </main>
 
 
-<footer>
+<!-- <footer>
     <app-footer />
-</footer>
+</footer> -->
+
+
+<!-- u can find it in mainLayout.html🎈 -->
