--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -12,8 +12,8 @@
         </li>    -->
       </ul>
       <form class="d-flex">
-        <button class="LogInBtn" type="submit">Log In</button>
-        <button class="SignUpBtn" type="submit">Sign Up</button>
+        <button (click)="goToLogin()" class="LogInBtn" type="submit">Log In</button>
+        <button (click)="goToRegister()" class="SignUpBtn" type="submit">Sign Up</button>
       </form>
     </div>
   </div>
